compile change for image stretch fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,7 +17,7 @@ html, body {
 .fancy-text {
   font-family: 'Dancing Script', cursive; }
 
-img {
+main img {
   max-width: 100%;
   width: 100%; }
 
